fix: card city title wrong color

--- a/travel-map/src/components/molecules/Cards/CityCard.scss
+++ b/travel-map/src/components/molecules/Cards/CityCard.scss
@@ -106,7 +106,7 @@
 
 .home--light {
   .city-card {
-    h3 {
+    h2 {
       color: v.$darkLeftBar;
     }
     .city-card__background {
@@ -126,7 +126,7 @@
 
 .home--dark {
   .city-card {
-    h3 {
+    h2 {
       color: v.$lightLeftBar;
     }
     .city-card__background {
